avcodec/dvbsubdec: support returning exact end times

fixess part of ticket #2024

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>